story(ccls-2178): Add Application delete endpoint